<resources>

    <string name="app_name">Potted Bunnies</string>
    <string name="app_version">Alpha (0.0.0)</string>
    <string name="app_user_data">pb-user-data.json</string>

    <!-- Player Status -->
    <string name="player_000">Name</string>
    <string name="player_001">Rank</string>
    <string name="player_002">Coins</string>
    <string name="player_003">Gems</string>

    <!-- Connection Purposes -->
    <string name="connect_000">Connection</string>
    <string name="connect_000_a">Connection cannot be found.\Please try again.</string>
    <string name="connect_000_b">Retry</string>
    <string name="connect_000_c">Quit</string>

    <string name="connect_001">Version Update</string>
    <string name="connect_002_a">A new version is available.\nPlease head to the Google Play Store for details.</string>
    <string name="connect_002_b">Update</string>
    <string name="connect_002_c">Quit</string>

    <!-- Closing Application Popup -->
    <string name="close_000">Close App</string>
    <string name="close_001">Do you want to close\nPotted Bunnies?</string>
    <string name="close_002">Proceed</string>
    <string name="close_003">Back</string>

    <!-- Initialize Screen strings -->
    <string name="init_000">Game Data</string>
    <string name="init_000_a">No game data has been found.</string>
    <string name="init_000_b">What would you like to do?</string>
    <string name="init_000_c">New Game</string>
    <string name="init_000_d">Migrate</string>
    <string name="init_001_a">Welcome</string>
    <string name="init_001_b">Before you can proceed,\nplease tell me your name.</string>
    <string name="init_001_c">* Character range is 2 - 12.</string>
    <string name="init_001_d">Enter a name.</string>
    <string name="init_001_e">* Invalid name, please try again.</string>
    <string name="init_001_f">Proceed</string>

    <!-- Splash Title Screen strings -->
    <string name="title_000">Potted Bunnies</string>
    <string name="title_001">Tap to Proceed</string>
    <string name="title_002"></string>

    <!-- Loading Screen strings -->
    <string name="load_cd_000">The loading image and animation of the screen.</string>
    <string name="load_000">Loading...</string>
    <string-array name="loading_messages">
        <item>Sprouting in progress...</item>
        <item>Arranging pots...</item>
        <item>Changing soil...</item>
        <item>Water in spraying...</item>
        <item>Applying manure...</item>
        <item>Clipping leaves...</item>
    </string-array>

    <!-- Main Menu Screen strings -->
    <string name="main_000">Home</string>
    <string name="main_001">Games</string>
    <string name="main_002">Gallery</string>
    <string name="main_003">Store</string>
    <string name="main_004">Option</string>

</resources>
