<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/popup_000"
    android:id="@+id/popup_exit_app">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/popup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_000"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_proceed"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="onPopupProceed"
                android:text="@string/close_002"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_back"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="onPopupBack"
                android:text="@string/close_003"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
